--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
     "dev": "node server",
     "dev:dist": "cross-env NODE_ENV=production gulp devDist",
     "dev:test": "gulp devTest"
